sandbox/output
MedicineClash.java:2: error: cannot find symbol
    public static Set<Customer> of(Set<Customer> customers) {
                                   ^
  symbol:   class Set
  location: class MedicineClash
MedicineClash.java:2: error: cannot find symbol
    public static Set<Customer> of(Set<Customer> customers) {
                  ^
  symbol:   class Set
  location: class MedicineClash
2 errors
